fixed table alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -109,3 +109,7 @@ blockquote {
 .map-container {
   margin: 5px;
 }
+
+.top-align {
+  vertical-align: top;
+}
