--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1004,4 +1004,8 @@ blockquote > :last-child {
   margin: 5px;
 }
 
+.top-align {
+  vertical-align: top;
+}
+
 /*# sourceMappingURL=styles.css.map */
